# hybrid-search-api

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  sample.env
config/: init_app.py  settings.py
config/elasticsearch/: indexes_config.py
config/initializers/: elastic_search_client.py  embeddings_model.py
src/controllers/: hello_controller.py
src/dependencies/: elasticsearch.py
src/routes/: __init__.py  hello_routes.py
src/routes/api/: documents_routes.py
src/schemas/: chunk_schema.py  document_schema.py
src/services/: chunk_service.py  document_service.py  elastic_search_service.py  embedding_service.py
src/services/extraction/: base_extraction_service.py  extraction_factory.py  pdf_extractor.py  txt_extractor.py
