[project]
name = "documents-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.3",
    "elasticsearch>=9.3.0",
    "fastapi[standard]>=0.135.1",
    "langchain-text-splitters>=1.1.1",
    "pymupdf4llm>=0.3.4",
    "sentence-transformers>=5.2.3",
]
